// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppStatistics app detail statistics 1`] = `
<div
  class="panel card appStatistics"
>
  <dl>
    <dt>
      Online version
    </dt>
    <dd>
      0
    </dd>
  </dl>
  <dl>
    <dt>
      Deploy times this month
    </dt>
    <dd>
      0
    </dd>
  </dl>
  <dl>
    <dt>
      Total of deploy
    </dt>
    <dd>
      0
    </dd>
  </dl>
</div>
`;

exports[`AppStatistics basic render 1`] = `
<div
  class="panel card appStatistics"
>
  <dl>
    <dt>
      On the shelf apps
    </dt>
    <dd>
      0
    </dd>
  </dl>
  <dl>
    <dt>
      Deploy times this month
    </dt>
    <dd>
      0
    </dd>
  </dl>
  <dl>
    <dt>
      Total of deploy
    </dt>
    <dd>
      0
    </dd>
  </dl>
</div>
`;
